<resources>
    <string name="app_name">My Application</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My Store</string>
    <string name="menu_gallery">Manage Store</string>
    <string name="menu_slideshow">Profile</string>

    <string name="home_second">Home Second</string>
    <string name="password">password</string>
    <string name="textview">TextView</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="store_id">Store ID #</string>
    <string name="username">Username</string>
    <string name="logo">logo</string>
    <string name="managerPassword">Password</string>
    <string name="menu_update">Update Item</string>

</resources>
