<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="net.androidbootcamp.myapplication.ui.store_home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_items">
        <action
            android:id="@+id/action_nav_home_to_updateItem"
            app:destination="@id/updateItem" />
        <action
            android:id="@+id/action_nav_home_to_ManageStore"
            app:destination="@id/ManageStore" />
    </fragment>

    <fragment
        android:id="@+id/ManageStore"
        android:name="net.androidbootcamp.myapplication.ui.manage_store.manageStoreFragment"
        android:label="@string/menu_gallery">
        <action
            android:id="@+id/action_ManageStore_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/updateItem"
        android:name="net.androidbootcamp.myapplication.ui.moditem.ModItemFragment"
        android:label="@string/menu_update">
        <action
            android:id="@+id/action_updateItem_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>


    <fragment
        android:id="@+id/AddStore"
        android:name="net.androidbootcamp.myapplication.ui.AddStore.addAStoreFragment"
        android:label="Add a Store" />

    <fragment
        android:id="@+id/revenue"
        android:name="net.androidbootcamp.myapplication.ui.revenue.RevenueFragment"
        android:label="Revenue" />

    <fragment
        android:id="@+id/AddManager"
        android:name="net.androidbootcamp.myapplication.ui.addmanger.AddMangerFragment"
        android:label="Add Manager" />
</navigation>